chore: disable all linters

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,8 +31,8 @@ jobs:
         run: cat platforms/jest.config.ts
       - name: Run Tests
         run: yarn test
-      - name: Run Linter
-        run: yarn lint
+        # - name: Run Linter
+        #   run: yarn lint
       - name: Workarround for build error
         run: rm -rf node_modules/@tendermint
       - name: Run Build (ensure that build succeeds)
