--- a/identity/package.json
+++ b/identity/package.json
@@ -37,14 +37,15 @@
     "@ethersproject/providers": "^5.6.2",
     "@gitcoin/passport-platforms": "^1.0.0",
     "@gitcoin/passport-types": "^1.0.0",
+    "@holonym-foundation/mishtiwasm": "^0.3.0-robustnet",
     "@ipld/dag-cbor": "^9.2.2",
     "axios": "^1.7.9",
     "dids": "^5.0.3",
     "multiformats": "^13.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.3",
     "@babel/cli": "^7.23.3",
+    "@babel/core": "^7.23.3",
     "@babel/plugin-syntax-import-assertions": "^7.23.3",
     "@babel/plugin-transform-modules-commonjs": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
