--- a/identity/package.json
+++ b/identity/package.json
@@ -20,6 +20,7 @@
     "@ethersproject/providers": "^5.6.2",
     "@gitcoin/passport-platforms": "^1.0.0",
     "@gitcoin/passport-types": "^1.0.0",
+    "@holonym-foundation/mishtiwasm": "^0.3.0-robustnet",
     "@ipld/dag-cbor": "^9.2.2",
     "axios": "^1.7.9",
     "dids": "^5.0.3",
