--- a/database-client/package.json
+++ b/database-client/package.json
@@ -23,7 +23,7 @@
     "debug": "tsc --watch",
     "ceramic": "CERAMIC_ENABLE_EXPERIMENTAL_COMPOSE_DB='true' ceramic daemon --config composedb.config.json",
     "test:integration": "yarn build && yarn node --experimental-vm-modules $(yarn bin jest) -c jest.integration.config.js",
-    "test": "yarn node --experimental-vm-modules $(yarn bin jest) -c jest.config.cjs"
+    "test": "yarn node --experimental-vm-modules $(yarn bin jest)"
   },
   "dependencies": {
     "@composedb/client": "^0.7.1",
@@ -46,7 +46,10 @@
     "jest": "^29.6.4",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.8.0",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "@swc/cli": "^0.6.0",
+    "@swc/core": "^1.10.14",
+    "@swc/jest": "^0.2.37"
   },
   "resolutions": {
     "leveldown": "6.1.1"
