--- a/database-client/tsconfig.json
+++ b/database-client/tsconfig.json
@@ -3,17 +3,16 @@
   "compilerOptions": {
     "module": "NodeNext",
     "esModuleInterop": true,
-    "declaration": true,
     "allowSyntheticDefaultImports": true,
-    "target": "ESNext",
+    "allowJs": true,
+    "target": "ES2022",
+    "noImplicitAny": true,
     "moduleResolution": "nodenext",
     "sourceMap": true,
-    "outDir": "dist/esm",
-    "allowJs": true,
-    "baseUrl": "src",
-    "skipLibCheck": true,
+    "outDir": "dist",
+    "baseUrl": ".",
     "resolveJsonModule": true,
-    "lib": ["ESNext"]
+    "skipLibCheck": true
   },
-  "include": ["src/*", "___test___", "integration-tests"]
+  "include": ["src/**/*"]
 }
