feat(embed): inherit secrets

--- a/.github/workflows/embed_production.yml
+++ b/.github/workflows/embed_production.yml
@@ -25,6 +25,7 @@ jobs:
     name: Build App and Deploy to Production S3
     needs: ref
     uses: ./.github/workflows/sync_to_s3_generic.yml
+    secrets: inherit
     with:
       refspec: ${{ needs.ref.outputs.refspec }}
       environment: production
