--- a/.github/workflows/embed_staging.yml
+++ b/.github/workflows/embed_staging.yml
@@ -25,6 +25,8 @@ jobs:
     name: Build App and Deploy to Staging S3
     needs: ref
     uses: ./.github/workflows/sync_to_s3_generic.yml
+    secrets: inherit
     with:
       refspec: ${{ needs.ref.outputs.refspec }}
       environment: staging
+      
