--- a/.github/workflows/sync_to_s3_generic.yml
+++ b/.github/workflows/sync_to_s3_generic.yml
@@ -58,7 +58,7 @@ jobs:
         working-directory: embed-popup
         run: |
           echo "ONE_PASS_ENV=$ONE_PASS_ENV"
-          op item get "$ONE_PASS_ENV" --vault "DevOps" --format json --non-interactive | \
+          op item get "$ONE_PASS_ENV" --vault "DevOps" --format json | \
           jq -r '.fields[] | select(.section.label=="App") | "\(.label)=\(.value)"' >> $GITHUB_ENV
       
       - name: Install Pulumi CLI
