--- a/embed/package.json
+++ b/embed/package.json
@@ -2,19 +2,20 @@
   "name": "@gitcoin/passport-embed",
   "private": true,
   "version": "1.0.0",
-  "main": "dist/src/main.js",
-  "types": "src/types.d.ts",
+  "main": "dist/main.js",
+  "module": "dist/main.js",
+  "types": "dist/index.d.ts",
   "type": "module",
   "license": "MIT",
   "scripts": {
     "clean": "rimraf dist node_modules",
     "prebuild": "yarn run lint",
-    "build": "tsc",
+    "build": "tsc --declaration",
     "prestart": "yarn run build",
     "start": "node .",
     "debug": "concurrently --kill-others \"tsc --watch\" \"node --watch --inspect .\"",
     "prod:start": "tsc && node .",
-    "test": "node --experimental-vm-modules ../node_modules/jest/bin/jest.js",
+    "test": "jest",
     "prettier": "prettier --write .",
     "lint": "tsc --noEmit",
     "lint:fix": "eslint --fix --ext .ts,.js,.tsx ."
@@ -61,10 +62,7 @@
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "tsx": "^4.7.0",
-    "typescript": "^5.7.3",
-    "@swc/cli": "^0.6.0",
-    "@swc/core": "^1.10.14",
-    "@swc/jest": "^0.2.37"
+    "typescript": "^5.7.3"
   },
   "resolutions": {
     "leveldown": "6.1.1"
