--- a/iam/package.json
+++ b/iam/package.json
@@ -14,7 +14,7 @@
     "start": "node .",
     "debug": "concurrently --kill-others \"tsc --watch\" \"node --watch --inspect .\"",
     "prod:start": "tsc && node .",
-    "test": "node --experimental-vm-modules ../node_modules/jest/bin/jest.js",
+    "test": "jest",
     "prettier": "prettier --write .",
     "lint": "tsc --noEmit",
     "lint:fix": "eslint --fix --ext .ts,.js,.tsx .",
@@ -66,13 +66,9 @@
     "babel-plugin-transform-import-meta": "^2.2.1",
     "jest": "^29.6.4",
     "supertest": "^6.2.2",
-    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "tsx": "^4.7.0",
-    "typescript": "^5.7.3",
-    "@swc/cli": "^0.6.0",
-    "@swc/core": "^1.10.14",
-    "@swc/jest": "^0.2.37"
+    "typescript": "^5.7.3"
   },
   "resolutions": {
     "leveldown": "6.1.1"
