--- a/embed/package.json
+++ b/embed/package.json
@@ -17,7 +17,7 @@
     "prod:start": "tsc && node .",
     "test": "jest",
     "prettier": "prettier --write .",
-    "lint": "tsc --noEmit",
+    "lint": "tsc --noEmit && eslint",
     "lint:fix": "eslint --fix --ext .ts,.js,.tsx ."
   },
   "dependencies": {
@@ -34,7 +34,6 @@
     "ioredis": "^5.4.1",
     "luxon": "^2.4.0",
     "rate-limit-redis": "^4.2.0",
-    "tslint": "^6.1.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -48,12 +47,8 @@
     "@types/node-fetch": "latest",
     "@types/supertest": "^2.0.12",
     "@types/webpack-env": "^1.16.3",
-    "@typescript-eslint/parser": "^6.19.0",
     "babel-jest": "^29.7.0",
-    "eslint": "^8.52.0",
     "jest": "^29.6.4",
-    "prettier": "^3.1.0",
-    "prettier-eslint": "^16.1.2",
     "supertest": "^6.2.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
