--- a/identity/package.json
+++ b/identity/package.json
@@ -2,7 +2,6 @@
   "name": "@gitcoin/passport-identity",
   "version": "1.0.0",
   "license": "MIT",
-  "main": "./dist/esm/index.js",
   "module": "./dist/esm/index.js",
   "types": "./dist/esm/index.d.ts",
   "type": "module",
@@ -12,14 +11,6 @@
       "types": "./dist/esm/index.d.ts"
     }
   },
-  "directories": {
-    "src": "src",
-    "dist": "dist"
-  },
-  "files": [
-    "src",
-    "dist"
-  ],
   "publishConfig": {
     "access": "public"
   },
@@ -41,11 +32,9 @@
     "@babel/plugin-transform-modules-commonjs": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
-    "@swc/cli": "^0.6.0",
-    "@swc/core": "^1.10.14",
-    "@swc/jest": "^0.2.37",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^29.5.14",
     "@types/luxon": "^2.3.2",
     "@types/node": "16",
     "@types/node-fetch": "latest",
@@ -64,8 +53,8 @@
   "scripts": {
     "clean": "rimraf dist node_modules",
     "build": "tsc --declaration --module NodeNext --outDir dist/esm",
-    "test": "node --experimental-vm-modules ../node_modules/jest/bin/jest.js",
-    "lint": "tsc --noEmit && eslint --ext .ts,.js,.tsx .",
+    "test": "jest",
+    "lint": "tsc --noEmit && eslint",
     "prettier": "prettier --write ."
   }
 }
