--- a/package.json
+++ b/package.json
@@ -1,15 +1,29 @@
 {
   "name": "@gitcoin/passport",
   "private": true,
+  "type": "module",
   "devDependencies": {
-    "@commitlint/cli": "^16.2.3",
-    "@commitlint/config-conventional": "^16.2.1",
+    "@commitlint/cli": "^19.7.1",
+    "@commitlint/config-conventional": "^19.7.1",
+    "@eslint/js": "^9.20.0",
     "@types/node": "^17.0.23",
+    "@typescript-eslint/eslint-plugin": "^8.24.0",
+    "@typescript-eslint/parser": "^8.24.0",
     "concurrently": "^7.0.0",
+    "eslint": "^9.20.1",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-jest": "^28.11.0",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^15.15.0",
     "husky": "^7.0.0",
     "lerna": "^4.0.0",
-    "prettier": "^2.2.1",
-    "rimraf": "^3.0.2"
+    "prettier": "^3.5.1",
+    "prettier-eslint": "^16.3.0",
+    "rimraf": "^3.0.2",
+    "typescript-eslint": "^8.24.0"
   },
   "workspaces": [
     "app",
