--- a/types/package.json
+++ b/types/package.json
@@ -2,17 +2,17 @@
   "name": "@gitcoin/passport-types",
   "version": "1.0.0",
   "license": "MIT",
+  "type": "module",
   "types": "src/index.d.ts",
   "scripts": {
     "build": "tsc -b .",
     "clean": "rimraf dist *.tsbuildinfo",
-    "lint": "tsc --noEmit && eslint --ext .ts,.js,.tsx .",
+    "lint": "tsc --noEmit && eslint",
     "prettier": "prettier --write .",
     "precommit": "lint-staged",
     "ethers": "^5.0.32"
   },
   "devDependencies": {
-    "tslint": "^6.1.3",
     "typescript": "^5.7.3"
   }
 }
