--- a/embed/.env-example.env
+++ b/embed/.env-example.env
@@ -87,3 +87,4 @@ SCROLL_BADGE_ATTESTATION_SCHEMA_UID=0xd57de4f41c3d3cc855eadef68f98c0d4edd22d5716
 REDIS_URL=redis://localhost:6379/0
 
 EMBED_POPUP_OAUTH_URL=https://embed-popup.review.passport.xyz/
+FF_ROTATING_KEYS=on
