feat: update .env-example in iam and embed

--- a/embed/.env-example.env
+++ b/embed/.env-example.env
@@ -88,3 +88,6 @@ REDIS_URL=redis://localhost:6379/0
 
 EMBED_POPUP_OAUTH_URL=https://embed-popup.review.passport.xyz/
 FF_ROTATING_KEYS=on
+
+# Control the % of stamps that we want to attach a human network hash. This shall be a number between 0 and 100.
+# HUMAN_NETWORK_NULLIFIER_PERCENT=
