--- a/embed/.env-example.env
+++ b/embed/.env-example.env
@@ -87,3 +87,7 @@ SCROLL_BADGE_ATTESTATION_SCHEMA_UID=0xd57de4f41c3d3cc855eadef68f98c0d4edd22d5716
 REDIS_URL=redis://localhost:6379/0
 
 EMBED_POPUP_OAUTH_URL=https://embed-popup.review.passport.xyz/
+FF_ROTATING_KEYS=on
+
+# Control the % of stamps that we want to attach a human network hash. This shall be a number between 0 and 100.
+# HUMAN_NETWORK_NULLIFIER_PERCENT=
