--- a/iam/.env-example.env
+++ b/iam/.env-example.env
@@ -81,4 +81,7 @@ SCROLL_BADGE_ATTESTATION_SCHEMA_UID=0xd57de4f41c3d3cc855eadef68f98c0d4edd22d5716
 FF_ROTATING_KEYS=on
 
 # Control the % of stamps that we want to attach a human network hash. This shall be a number between 0 and 100.
-# HUMAN_NETWORK_NULLIFIER_PERCENT=
+# HUMAN_NETWORK_NULLIFIER_PERCENT=50
+# HUMAN_NETWORK_TIMEOUT_MS=5000
+# HUMAN_NETWORK_RELAY_URL=http://...:8081/
+# HUMAN_NETWORK_CLIENT_PRIVATE_KEY=0x...
