feat: adding example config for epoch keys for iam

--- a/iam/.env-example.env
+++ b/iam/.env-example.env
@@ -85,3 +85,10 @@ FF_ROTATING_KEYS=on
 # HUMAN_NETWORK_TIMEOUT_MS=5000
 # HUMAN_NETWORK_RELAY_URL=http://...:8081/
 # HUMAN_NETWORK_CLIENT_PRIVATE_KEY=0x...
+
+
+# Configure rotating keys for epochs
+# IAM_JWK_EIP712_V1='{...}'
+# IAM_JWK_EIP712_V1_START_TIME=2025-06-01T00:00:00Z
+# IAM_JWK_EIP712_V2='{...}'
+# IAM_JWK_EIP712_V2_START_TIME=2025-09-01T00:00:00Z
