--- a/iam/.env-example.env
+++ b/iam/.env-example.env
@@ -85,6 +85,7 @@ FF_ROTATING_KEYS=on
 # HUMAN_NETWORK_TIMEOUT_MS=5000
 # HUMAN_NETWORK_RELAY_URL=http://...:8081/
 # HUMAN_NETWORK_CLIENT_PRIVATE_KEY=0x...
+# HUMAN_NETWORK_START_VERSION=1
 
 
 # Configure rotating keys for epochs
