--- a/.github/workflows/build_and_deploy_production.yml
+++ b/.github/workflows/build_and_deploy_production.yml
@@ -27,11 +27,11 @@ jobs:
     needs: [ref]
     runs-on: ubuntu-latest
     # Run a local ceramic nod to test against
-    services:
-      ceramic:
-        image: gitcoinpassport/js-ceramic:3.2.0
-        ports:
-          - 7007:7007
+    # services:
+    #   ceramic:
+    #     image: gitcoinpassport/js-ceramic:3.2.0
+    #     ports:
+    #       - 7007:7007
 
     steps:
       - uses: actions/checkout@v3
@@ -58,18 +58,18 @@ jobs:
         env:
           OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
           CERAMIC_PRIVATE_KEY: op://DevOps/passport-xyz-production-secrets/ci/CERAMIC_PRIVATE_KEY
-      - name: Deploy Ceramic Models
-        working-directory: ./schemas
-        run: yarn models:deploy-composite
-        env:
-          CERAMIC_URL: http://localhost:7007
-          PRIVATE_KEY: ${{env.CERAMIC_PRIVATE_KEY}}
-      - name: Run Ceramic Integration Tests
-        run: yarn test:ceramic-integration
-        env:
-          CERAMIC_CLIENT_URL: http://localhost:7007
-          IAM_JWK: '{"kty":"OKP","crv":"Ed25519","x":"a7wbszn1DfZ3I7-_zDkUXCgypcGxL_cpCSTYEPRYj_o","d":"Z0hucmxRt1C22ygAXJ1arXwD9QlAA5tEPLb7qoXYDGY"}'
-          IAM_JWK_EIP712: '{"kty":"EC","crv":"secp256k1","x":"PdB2nS-knyAxc6KPuxBr65vRpW-duAXwpeXlwGJ03eU","y":"MwoGZ08hF5uv-_UEC9BKsYdJVSbJNHcFhR1BZWer5RQ","d":"z9VrSNNZXf9ywUx3v_8cLDhSw8-pvAT9qu_WZmqqfWM"}'
+      # - name: Deploy Ceramic Models
+      #   working-directory: ./schemas
+      #   run: yarn models:deploy-composite
+      #   env:
+      #     CERAMIC_URL: http://localhost:7007
+      #     PRIVATE_KEY: ${{env.CERAMIC_PRIVATE_KEY}}
+      # - name: Run Ceramic Integration Tests
+      #   run: yarn test:ceramic-integration
+      #   env:
+      #     CERAMIC_CLIENT_URL: http://localhost:7007
+      #     IAM_JWK: '{"kty":"OKP","crv":"Ed25519","x":"a7wbszn1DfZ3I7-_zDkUXCgypcGxL_cpCSTYEPRYj_o","d":"Z0hucmxRt1C22ygAXJ1arXwD9QlAA5tEPLb7qoXYDGY"}'
+      #     IAM_JWK_EIP712: '{"kty":"EC","crv":"secp256k1","x":"PdB2nS-knyAxc6KPuxBr65vRpW-duAXwpeXlwGJ03eU","y":"MwoGZ08hF5uv-_UEC9BKsYdJVSbJNHcFhR1BZWer5RQ","d":"z9VrSNNZXf9ywUx3v_8cLDhSw8-pvAT9qu_WZmqqfWM"}'
 
   check-provider-bitmap:
     name: Check Provider Bitmaps
