--- a/.github/workflows/build_and_deploy_staging.yml
+++ b/.github/workflows/build_and_deploy_staging.yml
@@ -27,11 +27,11 @@ jobs:
     needs: [ref]
     runs-on: ubuntu-latest
     # Run a local ceramic nod to test against
-    services:
-      ceramic:
-        image: gitcoinpassport/js-ceramic:3.2.0
-        ports:
-          - 7007:7007
+    # services:
+    #   ceramic:
+    #     image: gitcoinpassport/js-ceramic:3.2.0
+    #     ports:
+    #       - 7007:7007
 
     steps:
       - uses: actions/checkout@v3
