fix: adding HUMAN_NETWORK_WASM_PATH for the location of human wasm + optimizing iam and embed docker build

--- a/iam/.env-example.env
+++ b/iam/.env-example.env
@@ -86,7 +86,7 @@ FF_ROTATING_KEYS=on
 # HUMAN_NETWORK_RELAY_URL=http://...:8081/
 # HUMAN_NETWORK_CLIENT_PRIVATE_KEY=0x...
 # HUMAN_NETWORK_START_VERSION=1
-
+# HUMAN_NETWORK_WASM_PATH=... this should normally only be required when running from docker for example. 
 
 # Configure rotating keys for epochs
 # IAM_JWK_EIP712_V1='{...}'
