--- a/iam/Dockerfile
+++ b/iam/Dockerfile
@@ -1,9 +1,23 @@
-FROM node:22.14.0
-WORKDIR /usr/src
+FROM node:22.14.0 AS build
+WORKDIR /app
 
 COPY . .
 
-RUN yarn
+RUN yarn --mode=production --frozen-lockfile install --ignore-scripts \
+&& yarn build:platforms \
+&& yarn build:identity \
+&& yarn build:iam
+
+
+FROM node:22.14.0
+WORKDIR /app
+
+COPY --from=build /app/node_modules ./node_modules
+COPY --from=build /app/iam ./iam
+COPY --from=build /app/identity ./node_modules/@gitcoin/passport-identity
+COPY --from=build /app/platforms ./node_modules/@gitcoin/passport-platforms
+
+ENV HUMAN_NETWORK_WASM_PATH=/app/node_modules/@holonym-foundation/mishtiwasm/pkg/esm/mishtiwasm_bg.wasm
 
 EXPOSE 80 443
 CMD [ "node", "iam/dist/iam/src/main.js" ]
