--- a/.github/workflows/deploy_generic.yml
+++ b/.github/workflows/deploy_generic.yml
@@ -45,7 +45,7 @@ jobs:
         run: |
           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
           unzip awscliv2.zip
-          sudo ./aws/install
+          sudo ./aws/install --update
 
       - name: Check if ECR image exists
         id: ecr_check
