feat: updating linting & pre-commit

--- a/iam/package.json
+++ b/iam/package.json
@@ -15,9 +15,8 @@
     "debug": "concurrently --kill-others \"tsc --watch\" \"node --watch --inspect .\"",
     "prod:start": "tsc && node .",
     "test": "jest",
-    "prettier": "prettier --write .",
+    "prettier": "prettier --write . && prettier --check .",
     "lint": "tsc --noEmit && eslint",
-    "lint:fix": "eslint --fix --ext .ts,.js,.tsx .",
     "checkProviders:op-sepolia": "tsx src/scripts/checkOnChainProvidersAreInSync.ts https://opt-sepolia.g.alchemy.com/v2/ 0xaa37dc 0x19a6DCAbE629C8e71814bD9B4Ea7e2A7B90cFeC0",
     "checkProviders:op": "tsx src/scripts/checkOnChainProvidersAreInSync.ts https://opt-mainnet.g.alchemy.com/v2/ 0xa 0x5558D441779Eca04A329BcD6b47830D2C6607769",
     "checkProviders:arb": "tsx src/scripts/checkOnChainProvidersAreInSync.ts https://arb-mainnet.g.alchemy.com/v2/ 0xa4b1 0x2050256A91cbABD7C42465aA0d5325115C1dEB43",
