--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,7 @@
     "prod-start": "NEXT_PUBLIC_GIT_COMMIT_HASH=$(git rev-parse --short HEAD) next start",
     "clean": "rimraf node_modules && rimraf .next",
     "lint": "next lint && prettier --check .",
-    "lint:fix": "next lint && prettier --write .",
+    "prettier": "prettier --write .",
     "test": "vitest --run",
     "test:watch": "vitest --watch"
   },
@@ -93,7 +93,6 @@
     "happy-dom": "^15.11.0",
     "identity-obj-proxy": "^3.0.0",
     "postcss": "^8.4.5",
-    "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react-qr-code": "^2.0.7",
     "tailwindcss": "^3.4.10",
