--- a/embed/package.json
+++ b/embed/package.json
@@ -17,7 +17,7 @@
     "prod:start": "tsc && node .",
     "test": "jest",
     "prettier": "prettier --write .",
-    "lint": "tsc --noEmit && eslint && prettier --check .",
+    "lint": "tsc --noEmit && eslint && prettier --check ."
   },
   "dependencies": {
     "@gitcoin/passport-identity": "^1.0.0",
