--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "globals": "^15.15.0",
     "husky": "^7.0.0",
     "lerna": "^4.0.0",
+    "lint-staged": "^15.5.0",
     "prettier": "^3.5.1",
     "prettier-eslint": "^16.3.0",
     "rimraf": "^3.0.2",
@@ -87,6 +88,12 @@
     "did-session/uint8arrays": "^5.1.0",
     "dids/uint8arrays": "^5.1.0",
     "@didtools/**/uint8arrays": "^5.1.0"
+  },
+  "lint-staged": {
+    "*.{ts,js}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
