fix: ran prettier on entire project

--- a/embed/tsconfig.json
+++ b/embed/tsconfig.json
@@ -12,7 +12,7 @@
     "baseUrl": ".",
     "resolveJsonModule": true,
     "skipLibCheck": true,
-    "strict": true,
+    "strict": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "../node_modules"]
