--- a/identity/tsconfig.json
+++ b/identity/tsconfig.json
@@ -14,9 +14,7 @@
     "baseUrl": "src",
     "skipLibCheck": true,
     "resolveJsonModule": true,
-    "typeRoots": ["./node_modules/@types", "./src/types"],
+    "typeRoots": ["./node_modules/@types", "./src/types"]
   },
-  "include": [
-    "src/**/*",
-  ]
+  "include": ["src/**/*"]
 }
