--- a/.github/workflows/embed.yml
+++ b/.github/workflows/embed.yml
@@ -46,12 +46,12 @@ jobs:
               env:
                 OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
                 PULUMI_ACCESS_TOKEN: op://DevOps/passport-xyz-${{ inputs.environment }}-secrets/ci/PULUMI_ACCESS_TOKEN
-                AWS_ACCESS_KEY_ID: op://DevOps/github-aws-${{ inputs.environment }}/ci/AWS_ACCESS_KEY_ID
-                AWS_SECRET_ACCESS_KEY: op://DevOps/github-aws-${{ inputs.environment }}/ci/AWS_SECRET_ACCESS_KEY
+                AWS_ACCESS_KEY_ID: op://DeployerVault/github-aws-${{ inputs.environment }}/ci/AWS_ACCESS_KEY_ID
+                AWS_SECRET_ACCESS_KEY: op://DeployerVault/github-aws-${{ inputs.environment }}/ci/AWS_SECRET_ACCESS_KEY
             
             - name: Set AWS_SESSION_TOKEN if needed
               if: inputs.environment == 'production'
-              run: echo "AWS_SESSION_TOKEN=$(op read op://DevOps/github-aws-production/ci/AWS_SESSION_TOKEN)" >> $GITHUB_ENV
+              run: echo "AWS_SESSION_TOKEN=$(op read op://DeployerVault/github-aws-production/ci/AWS_SESSION_TOKEN)" >> $GITHUB_ENV
                 
             - name: Install 1Password CLI
               uses: 1password/install-cli-action@v1
