--- a/.github/workflows/deploy_ui_review.yml
+++ b/.github/workflows/deploy_ui_review.yml
@@ -41,24 +41,24 @@ jobs:
         with:
           node-version: 22.14.0
           cache: "yarn"
-      - name: Install Packages
-        run: yarn install --frozen-lockfile
-      - name: Run Tests
-        run: yarn test
-      - name: Run Linter
-        run: yarn lint
-      - name: Workarround for build error
-        run: rm -rf node_modules/@tendermint
-      - name: Run Build (ensure that build succeeds)
-        run: yarn build
-      - name: Load Secrets
-        id: op-load-secret
-        uses: 1password/load-secrets-action@v1
-        with:
-          export-env: true
-        env:
-          OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
-          CERAMIC_PRIVATE_KEY: op://DevOps/passport-xyz-review-secrets/ci/CERAMIC_PRIVATE_KEY
+      # - name: Install Packages
+      #   run: yarn install --frozen-lockfile
+      # - name: Run Tests
+      #   run: yarn test
+      # - name: Run Linter
+      #   run: yarn lint
+      # - name: Workarround for build error
+      #   run: rm -rf node_modules/@tendermint
+      # - name: Run Build (ensure that build succeeds)
+      #   run: yarn build
+      # - name: Load Secrets
+      #   id: op-load-secret
+      #   uses: 1password/load-secrets-action@v1
+      #   with:
+      #     export-env: true
+      #   env:
+      #     OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
+      #     CERAMIC_PRIVATE_KEY: op://DevOps/passport-xyz-review-secrets/ci/CERAMIC_PRIVATE_KEY
       # - name: Deploy Ceramic Models
       #   working-directory: ./schemas
       #   run: yarn models:deploy-composite
