fix: remove libs that break the build before running build

--- a/.github/workflows/sync_to_s3_generic_app.yml
+++ b/.github/workflows/sync_to_s3_generic_app.yml
@@ -92,7 +92,10 @@ jobs:
 
       - name: Build Application
         working-directory: .
-        run: yarn build
+        run: |
+          rm -rf node_modules/@tendermint
+          rm -rf node_modules/uint8arrays
+          yarn build
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
