--- a/.github/workflows/deploy_ui_review.yml
+++ b/.github/workflows/deploy_ui_review.yml
@@ -73,6 +73,7 @@ jobs:
       #     IAM_JWK_EIP712: '{"kty":"EC","crv":"secp256k1","x":"PdB2nS-knyAxc6KPuxBr65vRpW-duAXwpeXlwGJ03eU","y":"MwoGZ08hF5uv-_UEC9BKsYdJVSbJNHcFhR1BZWer5RQ","d":"z9VrSNNZXf9ywUx3v_8cLDhSw8-pvAT9qu_WZmqqfWM"}'
 
   deploy-ui:
+    # TODO (#106) - this job shall be deleted once deploy-ui-s3 is working
     name: Deploy UI to Review - Push to Branch
     runs-on: ubuntu-latest
     needs: [ref, run-tests]
@@ -87,7 +88,6 @@ jobs:
 
 
       - name: Push code to branch
-        # TODO - this action shall be removed once the next one is properly set up
         uses: passportxyz/gh-workflows/.github/actions/push_to_branch@v1
         with:
           commit: ${{ needs.ref.outputs.refspec }}
