--- a/.github/workflows/sync_to_s3_generic_app.yml
+++ b/.github/workflows/sync_to_s3_generic_app.yml
@@ -90,6 +90,12 @@ jobs:
         working-directory: .
         run: yarn install --frozen-lockfile
 
+      - name: Run Tests
+        run: yarn test
+
+      - name: Run Linter
+        run: yarn lint
+
       - name: Build Application
         working-directory: app
         run: |
