fix: proper env name passed on to sync_to_s3 in deploy_ui_production

--- a/.github/workflows/deploy_ui_production.yml
+++ b/.github/workflows/deploy_ui_production.yml
@@ -97,4 +97,4 @@ jobs:
     secrets: inherit
     with:
       refspec: ${{ needs.ref.outputs.refspec }}
-      environment: review
+      environment: production
