feat: have created workflow to push app to S3 (#3369)
* feat: have created workflow to push app to S3

* fix: reference to section name in workflow

* fix: section name should be lower case in workflow 'App -> app'

* fix: adjusting node version

* fix: removing test steps for easier testing

* fix: remove libs that break the build before running build

* fix: build step

* feat: adding the deploy to s3 step to staging & production

* fix: bad working dir

* fix: proper env name passed on to sync_to_s3 in deploy_ui_production

* fix: node version in workflow

* feat: updating release workflow to push UI to s3 as well

* feat: setting the deploy to s3 steps as dependency

* fix: type in 'passportAppistributionId'

--- a/.github/workflows/release_and_deploy_production.yml
+++ b/.github/workflows/release_and_deploy_production.yml
@@ -125,6 +125,7 @@ jobs:
     secrets: inherit
 
   deploy-ui-staging:
+    # TODO (#106): remove this after deploy to S3 is final
     name: Deploy UI to Staging - Push to branch
     runs-on: ubuntu-latest
     needs: [
@@ -149,6 +150,21 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           branch: staging-app
 
+  deploy-ui-s3-staging:
+    name: Deploy UI to Review - Push to S3
+    needs: [
+        ref,
+        run-tests,
+        # check-provider-bitmap,
+        create-draft-release,
+        deploy-api-staging,
+      ]
+    uses: ./.github/workflows/sync_to_s3_generic_app.yml
+    secrets: inherit
+    with:
+      refspec: ${{ needs.ref.outputs.refspec }}
+      environment: staging
+
   deploy-embed-s3-staging:
     name: Build Embed Popup and Deploy to Staging S3
     needs: ref
@@ -157,7 +173,7 @@ jobs:
     with:
       refspec: ${{ needs.ref.outputs.refspec }}
       environment: staging
-  
+
   deploy-api-production:
     name: Deploy API to Production
     needs: [
@@ -167,6 +183,7 @@ jobs:
         create-draft-release,
         deploy-api-staging,
         deploy-ui-staging,
+        deploy-ui-s3-staging,
       ]
     uses: ./.github/workflows/build_and_deploy_generic.yml
     with:
@@ -176,6 +193,7 @@ jobs:
     secrets: inherit
 
   deploy-ui-production:
+    # TODO (#106): remove this after deploy to S3 is final
     name: Deploy UI to Production - Push to branch
     runs-on: ubuntu-latest
     needs: [
@@ -202,6 +220,23 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           branch: production-app
 
+  deploy-ui-s3-production:
+    name: Deploy UI to Production - Push to S3
+    needs: [
+        ref,
+        run-tests,
+        # check-provider-bitmap,
+        create-draft-release,
+        deploy-api-staging,
+        deploy-ui-staging,
+        deploy-api-production,
+      ]
+    uses: ./.github/workflows/sync_to_s3_generic_app.yml
+    secrets: inherit
+    with:
+      refspec: ${{ needs.ref.outputs.refspec }}
+      environment: production
+
   deploy-embed-s3-production:
     name: Build Embed Popup and Deploy to Production S3
     needs: ref
@@ -221,6 +256,7 @@ jobs:
         deploy-ui-staging,
         deploy-api-production,
         deploy-ui-production,
+        deploy-ui-s3-production,
       ]
     permissions: write-all
     runs-on: ubuntu-latest
