--- a/.github/workflows/deploy_ui_review.yml
+++ b/.github/workflows/deploy_ui_review.yml
@@ -36,29 +36,29 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js 20
+      - name: Use Node.js 22
         uses: actions/setup-node@v3
         with:
           node-version: 22.14.0
           cache: "yarn"
-      - name: Install Packages
-        run: yarn install --frozen-lockfile
-      - name: Run Tests
-        run: yarn test
-      - name: Run Linter
-        run: yarn lint
-      - name: Workarround for build error
-        run: rm -rf node_modules/@tendermint
-      - name: Run Build (ensure that build succeeds)
-        run: yarn build
-      - name: Load Secrets
-        id: op-load-secret
-        uses: 1password/load-secrets-action@v1
-        with:
-          export-env: true
-        env:
-          OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
-          CERAMIC_PRIVATE_KEY: op://DevOps/passport-xyz-review-secrets/ci/CERAMIC_PRIVATE_KEY
+      # - name: Install Packages
+      #   run: yarn install --frozen-lockfile
+      # - name: Run Tests
+      #   run: yarn test
+      # - name: Run Linter
+      #   run: yarn lint
+      # - name: Workarround for build error
+      #   run: rm -rf node_modules/@tendermint
+      # - name: Run Build (ensure that build succeeds)
+      #   run: yarn build
+      # - name: Load Secrets
+      #   id: op-load-secret
+      #   uses: 1password/load-secrets-action@v1
+      #   with:
+      #     export-env: true
+      #   env:
+      #     OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
+      #     CERAMIC_PRIVATE_KEY: op://DevOps/passport-xyz-review-secrets/ci/CERAMIC_PRIVATE_KEY
       # - name: Deploy Ceramic Models
       #   working-directory: ./schemas
       #   run: yarn models:deploy-composite
@@ -73,6 +73,7 @@ jobs:
       #     IAM_JWK_EIP712: '{"kty":"EC","crv":"secp256k1","x":"PdB2nS-knyAxc6KPuxBr65vRpW-duAXwpeXlwGJ03eU","y":"MwoGZ08hF5uv-_UEC9BKsYdJVSbJNHcFhR1BZWer5RQ","d":"z9VrSNNZXf9ywUx3v_8cLDhSw8-pvAT9qu_WZmqqfWM"}'
 
   deploy-ui:
+    # TODO (#106) - this job shall be deleted once deploy-ui-s3 is working
     name: Deploy UI to Review - Push to Branch
     runs-on: ubuntu-latest
     needs: [ref, run-tests]
@@ -84,9 +85,20 @@ jobs:
         with:
           ref: ${{ needs.ref.outputs.refspec }}
           fetch-depth: 0
+
+
       - name: Push code to branch
         uses: passportxyz/gh-workflows/.github/actions/push_to_branch@v1
         with:
           commit: ${{ needs.ref.outputs.refspec }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
           branch: review-app
+
+  deploy-ui-s3:
+    name: Deploy UI to Review - Push to S3
+    needs: [ref, run-tests]
+    uses: ./.github/workflows/sync_to_s3_generic_app.yml
+    secrets: inherit
+    with:
+      refspec: ${{ needs.ref.outputs.refspec }}
+      environment: review
